@@ -35,9 +35,11 @@ POSSIBILITY OF SUCH DAMAGE.
 #include "libtorrent/fingerprint.hpp"
 #include "libtorrent/aux_/session_impl.hpp"
 #include "libtorrent/http_parser.hpp"
+#include "libtorrent/settings_pack.hpp"
 
 #include "test.hpp"
 #include "setup_transfer.hpp" // for load_file
+#include <boost/make_shared.hpp>
 
 using namespace libtorrent;
 
@@ -92,8 +94,11 @@ void test_feed(std::string const& filename, rss_expect const& expect)
 	char const header[] = "HTTP/1.1 200 OK\r\n"
 		"\r\n";
 
-	boost::shared_ptr<aux::session_impl> s = boost::shared_ptr<aux::session_impl>(new aux::session_impl(
-		std::make_pair(100, 200), fingerprint("TT", 0, 0, 0 ,0), NULL, 0));
+	settings_pack pack;
+	pack.set_int(settings_pack::max_retry_port_bind, 100);
+	pack.set_str(settings_pack::listen_interfaces, "0.0.0.0:100");
+	boost::shared_ptr<aux::session_impl> s = boost::make_shared<aux::session_impl>(
+		fingerprint("TT", 0, 0, 0 ,0));
 	s->start_session();
 
 	feed_settings sett;
